- Applied Chris Ortman's patch fixing NVELOCITY-ISSUE-11
  "NVelocity swallows Ambiguous matches"

- Applied Ashish Kulkarni's patch fixing NVELOCITY-ISSUE-28
  "handle divide-by-zero exception when performing arithmetic operations"
- Added ArithmeticExpressionTestCase.

- Applied Matthew Robinson's patch fixing NVELOCITY-ISSUE-33
  "uberinspectimp nullref exception"

- Applied Anders Waglund's patch fixing NVELOCITY-ISSUE-30
  "NVelocity foreach EventCartridge patch"

- Applied Sean Carpenter's patch fixing NVELOCITY-ISSUE-32
  "Bug in StringTokenizer for repeated tokens"

- Applied Simon Cropp's patch fixing NVELOCITY-22
  "remove some unused code"

- Applied Simon Cropp's patch fixing NVELOCITY-19
  "Clean up more code in nvelocity"

- Applied Ashish Kulkarni's patch that adds a new loader. Fixes NVELOCITY-20
  "add AssemblyRelativeResourceLoader for loading resources using with relative template names"

- Applied Simon Cropp's patch fixing NVELOCITY-18
  "Clean up more code in nvelocity"

- Applied Simon Cropp's patch fixing NVELOCITY-17
  "Clean up string concatenation, variable naming and spelling errors"

- Applied patch by Simon Cropp fixing NVELOCITY-16
  "Exception handling in character parsing is not optimal"

- Fixed NVELOCITY-15
  "Fix thread safety issue in ASTMethod.Execute()"

- Added escape support for the dictionary strings

  For example: #{onclick='alert(\'hello\')'}

- Added to_quote and to_squote identifiers special treatment

  usage:
  
  $message.to_quote  returns "message contents"
  $message.to_squote returns 'message contents'
  
  Note that this is not a method invocation.

- Added Duck typing support

  If an instance implements IDuck, methods and properties (get/set) will be dispatched
  to the IDuck interface instead of going the normal flow

- Fixed NVELOCITY-7
  "Dictionary support should support interpolation"

  Now it works the following way

  key='value' -> value is treated as String
  key=1       -> value is converted to int